--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -539,4 +539,12 @@ Toolbar -->
         <li><a [routerLink]="['/about']">About</a></li>
 </ul>
 
-<router-outlet></router-outlet>
+  <div class="content">
+    <!-- <div class="content-inside"> -->
+      <router-outlet></router-outlet>
+    <!-- </div> -->
+  </div>
+
+<div class="footer">
+  <app-footer></app-footer>
+</div>
