--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,14 +1,7 @@
-html, body {
-  height: 100%;
-  margin: 0;
+.wrapper {
+  min-height: 100%;
+  margin-bottom: -50px;
 }
-
-.content {
-  min-height: calc(100vh - 124px);
-}
-
 .footer {
   height: 50px;
-  color: rgba(142,142,159,1);
-  background-color: rgba(226,226,228,1);
 }
