--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,8 +1,8 @@
-<div class="row footer-container flex-vertical-center">
+<div class="footer-container flex-vertical-center">
 	<div class="col-md-4">
+		&copy; Copyright 2020. Harsh Agrawal
 	</div>
 	<div class="col-md-4">
-	&copy; Copyright 2020. Harsh Agrawal
 	</div>
 	<div class="col-md-4">
 	</div>
