--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,9 +1,9 @@
 <div class="footer-container flex-vertical-center">
-	<div class="col-md-4">
+	<div class="col-md-4 col-sm-10">
 		&copy; Copyright 2020. Harsh Agrawal
 	</div>
-	<div class="col-md-4">
+	<div class="col-md-4 col-sm-1">
 	</div>
-	<div class="col-md-4">
+	<div class="col-md-4 col-sm-1">
 	</div>
 </div>
