--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,5 +1,5 @@
 .footer-container{
 	height: 50px;
-	background: grey;
-	color: white;
+	background: rgba(226,226,228,1);
+	color: rgba(142,142,159,1);
 }
