--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,7 @@
           <li><a [routerLink]="['/about']">About</a></li>
       </ul> -->
 
+      <app-socialmedia></app-socialmedia>
+
 </div>
 <app-footer class="footer"></app-footer>
